--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             100% Fresh food we deliver and off-cource promote your brand like its ours
           </h2>
           <button class="btn" onclick="window.location.href = '#contact';">
-            Donete Now
+            Donate Now
           </button>
         </div>
       </section>
